data/derived/comb/progs/unify/prog1023.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x + 2)] 4;;
                          ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
